--- a/src/app.html
+++ b/src/app.html
@@ -2,9 +2,9 @@
 <html lang="de" class="h-100">
     <head>
         <meta charset="utf-8" />
-        %svelte.head%
+        %sveltekit.head%
     </head>
     <body class="d-flex flex-column h-100">
-        %svelte.body%
+        %sveltekit.body%
     </body>
 </html>
